@startuml
title Strategy Pattern - Reservation Pricing

skinparam classAttributeIconSize 0
skinparam shadowing false

abstract class User
class Student
class Faculty
class Researcher
class Guest

User <|-- Student
User <|-- Faculty
User <|-- Researcher
User <|-- Guest

interface PricingStrategy <<Strategy>> {
  + calculateHourlyRate(user: User): double
  + calculateDeposit(user: User, hours: long): double
  + calculateTotal(user: User, hours: long): double
}

class StudentPricingStrategy
class FacultyPricingStrategy
class ResearcherPricingStrategy
class GuestPricingStrategy

PricingStrategy <|.. StudentPricingStrategy
PricingStrategy <|.. FacultyPricingStrategy
PricingStrategy <|.. ResearcherPricingStrategy
PricingStrategy <|.. GuestPricingStrategy

class Reservation {
  - pricingStrategy: PricingStrategy
  - hourlyRate: double
  - depositAmount: double
  - totalCost: double
  + calculateTotalCost(): void
  + setPricingStrategy(strategy: PricingStrategy): void
}

class ReservationSystem {
  + createReservation(...): Reservation
}

Reservation --> PricingStrategy : uses
ReservationSystem ..> PricingStrategy : selects
Reservation --> User : prices for
@enduml
